services/service-cluster-ip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: myapp
    type: backend
  ports:
    - port: 8080
      targetPort: 8080
...
