services/service-node-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: dev
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster
  type: NodePort
  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: myapp
    type: frontend
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on the node
    # port - port exposed internally in the cluster related to the service
    # targetPort - the container port to send requests to
    - nodePort: 30080
      port: 80
      targetPort: 80
...
